# elasticsearch-mcp-server

./: .env  .env.example  .gitignore  .tool-versions  CHANGELOG.md  Dockerfile  Makefile  README.md  cliff.toml  compose.yml  pyproject.toml  requirements.txt  smithery.yaml
.github/workflows/: pypi-publish.yaml  release.yml
src/: server.py
src/clients/: __init__.py  base.py  exceptions.py
src/clients/common/: document.py
src/clients/elasticsearch/: __init__.py  alias.py  base.py  client.py  cluster.py  document.py  index.py
src/clients/interfaces/: __init__.py  alias.py  cluster.py  document.py  index.py
src/clients/opensearch/: __init__.py  alias.py  base.py  client.py  cluster.py  document.py  index.py
src/elasticsearch_mcp_server/: server.py
src/elasticsearch_mcp_server/tools/: alias.py  base.py  cluster.py  document.py  index.py  register.py
src/mcp_client/: config.py
src/tools/: alias.py  base.py  cluster.py  document.py  index.py  register.py
